# jcm

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: bill_acceptor_state.rs  cash_box_size.rs  currency.rs  denomination.rs  device_status.rs  error.rs  event_resend.rs  failure_code.rs  func_id.rs  function_status.rs  hash_algorithm.rs  image.rs  key_setting.rs  lib.rs  message.rs  near_full.rs  reject_code.rs  serial_number.rs  status_code.rs  ticket.rs  unit_number.rs  unit_status.rs  usb.rs
src/device_status/: function_mode.rs  major_minor_status.rs  tests.rs
src/function_status/: function_errors.rs  unit_availability.rs
src/image/: block.rs  block_number.rs  size.rs
src/message/: conf_id.rs  event.rs  func_id.rs  message_code.rs  message_data.rs  message_id.rs  request.rs  response.rs
src/message/event/: escrow_event.rs  inhibit_event.rs  rejected_event.rs
src/message/message_code/: event_code.rs  request_code.rs
src/message/message_data/: message_code.rs  message_type.rs
src/message/message_type/: event_type.rs  request_type.rs
src/message/request/: cash_box_size_request.rs  collect_request.rs  currency_assign_request.rs  denomination_disable_request.rs  direction_disable_request.rs  hold_request.rs  idle_request.rs  inhibit_request.rs  key_request.rs  model_name_request.rs  near_full_request.rs  note_image_request.rs  (+9 more)
src/near_full/: number.rs  status.rs
src/serial_number/: block.rs  block_number.rs  size.rs  size_total.rs
src/usb/: endpoint.rs
tests/: mod.rs
tests/e2e_tests/: common.rs  mod.rs  usb.rs
(+39 files in other folders)
