[package]
name = "jcm"
version = "0.2.3"
edition = "2021"
authors = ["JCM Rust Developers"]
description = "Pure Rust implementation of the JCM USB communication protocol"
keywords = ["usb", "jcm", "bill-acceptor", "bill-validator"]
categories = ["finance", "data-structures"]
repository = "https://github.com/decapod-atm/jcm"
license = "MIT"

[dependencies.currency-iso4217]
version = "0.1"

[dependencies.log]
version = "0.4"

[dependencies.crossbeam]
version = "0.8"
optional = true

[dependencies.nusb]
version = "0.1"
optional = true

[dependencies.futures-lite]
version = "2.2.0"
optional = true

[dependencies.smol-timeout]
version = "0.6"
optional = true

[dev-dependencies.env_logger]
version = "0.10"

[features]
default = ["usb"]
usb = ["crossbeam", "nusb", "futures-lite", "smol-timeout"]
e2e-tests = ["usb"]
